Logo link and spacing corrections

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -24,7 +24,7 @@ body {
 }
 
 main {
-	margin-top: 4em;
+	margin-top: 2em;
 	max-width: 37.5em;
 }
 
